2001-08-25  Darin Adler  <darin@bentspoon.com>

	* backends/Makefile.am:
	* examples/Makefile.am:
	* gconf-editor/Makefile.am:
	* tests/Makefile.am:
	* wrappers/guile/Makefile.am:
	Got rid of extra unneeded -I directives.

	* examples/basic-gconf-app.c:
	* examples/simple-controller.c:
	* examples/simple-view.c:
	Changed includes to use the normal <gconf/*> format, because
	that is both better for examples, and works fine when building
	gconf too, without any special -I trickery.

2001-08-19  Jesus Bravo Alvarez  <jba@pobox.com>

	* configure.in: Added gl (Galician) to ALL_LINGUAS.

2001-08-17  Maciej Stachowiak  <mjs@noisehavoc.org>

	* gconf/gconf-internals.c: (gconf_handle_oaf_exception): Handle
	rename for ParseFailed exception.

2001-08-15  Havoc Pennington  <hp@redhat.com>

        Merge from stable.
	
	* backends/xml-backend.c (x_shutdown): ditto
	(resolve_address): ditto

	* backends/bdb-backend.c (vtable_bdb_shutdown): ditto
	(vtable_bdb_resolve_address): ditto

	* gconf/gconf-internals.c (gconf_load_source_path): ditto

	* gconf/gconfd.c (gconf_server_load_sources): change to DEBUG
	level

	* backends/xml-backend.c (g_module_check_init): change a log
	message to DEBUG level

2001-08-14  Michael Meeks  <michael@ximian.com>

	* configure.in: depend on bonobo-activation >= 0.9.1

	* gconf/Makefile.am: Update to install GNOME_Config.server.

	* configure.in: update to GNOME_Config.server

	* gconf/Makefile.am (-DIID): rename to GNOME_Config_Daemon
	to fit with the bonobo namespace guidelines.

	* gconf/GNOME_Config.server.in: update & indent.

2001-08-13  Marco Pesenti Gritti  <mpeseng@tin.it>

	* doc/gconf/gconf.sgml: small explanation about 
	AM_GCONF_SOURCE_2 macro
	
2001-08-13  Havoc Pennington  <hp@redhat.com>

        Merge from stable.
	
	* gconf/gconf-internals.c (gconf_load_source_path): patch from
	Adam Spiers to honor variables in include lines

	* gconf/gconf-database.c (notify_listeners_cb):
	indentation/whitespace changes
