@@ -1,3 +1,12 @@
+2001-08-28  Yanko Kaneti  <yaneti@declera.com>
+
+	Merge from stable.
+
+	* gconf.m4.in: add --with-gconf-schema-dir -> GCONF_SCHEMA_FILE_DIR
+	to the AM_GCONF_SOURCE macro.
+
+	* doc/gconf/gconf.sgml: update the docs wrt the above change.
+
 2001-08-25  Darin Adler  <darin@bentspoon.com>
 
 	* backends/Makefile.am:
